Fuck you and your code