@@ -1,7 +1,7 @@
 import java.util.HashMap;
 import java.util.*;
 
-public abstract class AllPlans {
+public abstract class AllPlans implements Cloneable{
 
     private static HashMap<Member, ArrayList<AllPlans>> MemberPlans = new HashMap<>();
 
@@ -10,11 +10,11 @@ public abstract class AllPlans {
         ArrayList<AllPlans> temp = MemberPlans.get(member);
         temp.add(plan);
         MemberPlans.put(member, temp);
-
     }
 
     public AllPlans getActivePlan(Member member) throws CloneNotSupportedException {
         ArrayList<AllPlans> plans = MemberPlans.get(member);
-        return (AllPlans) plans.getLast().clone();
+        return (AllPlans) plans.get(plans.size()-1).clone();
+        //cjds
     }
 }
